Fixes mal-aligned icons with btn-action

--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -94,6 +94,8 @@
 		min-height: 0;
 		min-width: 0;
 
+		line-height: 0;
+
 		width: 3.5rem;
 		height: 3.5rem;
 		padding-left: 0;
